php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Doc Bug #7325 typo fixes
Submitted: 2000-10-18 19:27 UTC Modified: 2000-10-19 11:04 UTC
From: djm at web dot us dot uu dot net Assigned:
Status: Closed Package: Documentation problem
PHP Version: 4.0.3pl1 OS: any
Private report: No CVE-ID: None
 [2000-10-18 19:27 UTC] djm at web dot us dot uu dot net
Fixes for a think-o, and a punctuation boo-boo that puts a period in the middle of a sentence (which ends with something like " at <filename> line <line>").

--- apidoc-zend.txt     2000/10/18 21:08:51     1.1
+++ apidoc-zend.txt     2000/10/18 21:56:01     1.2
@@ -238,7 +238,7 @@
 and "bah" respectively - note that all defaults are always given as
 strings.  That doesn't reduce your ability to use integer values, simply
 specify them as strings.  "foo" is marked so that it can be changed by
-anyone at any time (PHP_INI_ALL), whereas "foo" is marked so it can be
+anyone at any time (PHP_INI_ALL), whereas "bar" is marked so it can be
 changed only at startup in the php3.ini only, presumably, by the system
 administrator (PHP_INI_SYSTEM).
 When "foo" changes, no function is called.  Access to it is done using the

--- main/fopen-wrappers.c       2000/10/18 21:08:57     1.1
+++ main/fopen-wrappers.c       2000/10/18 21:56:01     1.2
@@ -226,7 +226,7 @@
                   
                        ptr = end;
                }
-               php_error(E_WARNING, "open_basedir restriction in effect. File is in wrong directory.");
+               php_error(E_WARNING, "open_basedir restriction in effect. File is in wrong directory");
                efree(pathbuf);
                errno = EPERM; /* we deny permission to open it */
                return -1;

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2000-10-19 11:04 UTC] joey@php.net
Fixed in CVS. Thanks for the report.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Jun 15 04:00:01 2026 UTC