Close bug #7325. Patches by djm@web.us.uu.net.